--- a/连连看/连连看.vcxproj.filters
+++ b/连连看/连连看.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="chessRand.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="dbConnector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="chessRand.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="dbConnector.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
